[workspace]
resolver = "2"
members = [
    "framework",
    "wrappers/python",
]

[workspace.package]
edition = "2021"
version = "0.6.1"

[workspace.dependencies]
solrstice = { path = "framework" }
solrstice-py = { path = "wrappers/python" }

serde_json = "1"
serde = "1"
reqwest = { version = "0.12", default-features = false }
async-trait = "0.1"
thiserror = "2"
zookeeper-async = "5"
fastrand = "2"
log = "0.4"
zip = { version = "2", default-features = false }
tempfile = "3"
walkdir = "2"
tokio = "1"
lazy_static = "1"
dyn-clone = "1"
regex = "1"
dotenv = "0.15"
pyo3 = "0.21"
pyo3-asyncio = { package = "pyo3-asyncio-0-21", version = "0.21" }
pyo3-log = "0.10.0"
pythonize = "0.21"
env_logger = "0.11.3"
serial_test = "3.1.1"