[package]
name = "solrstice"
description = "A Solr 8+ client"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["solr", "search"]
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/Sh1nku/solrstice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
async-trait.workspace = true
thiserror = { workspace = true }
zookeeper-async.workspace = true
fastrand.workspace = true
log.workspace = true
zip = { workspace = true, default-features = false }
tempfile.workspace = true
walkdir.workspace = true
tokio = { workspace = true, optional = true }
lazy_static = { workspace = true }
dyn-clone.workspace = true
regex.workspace = true
[features]
blocking = ["tokio"]

[dev-dependencies]
tokio = { features = ["macros", "rt", "rt-multi-thread"], workspace = true }
serial_test.workspace = true
dotenv.workspace = true
env_logger.workspace = true