[package]
name = "solrstice-py"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solrstice"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "serde", "abi3-py38"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
pythonize = "0.20.0"
solrstice = { path = "../../framework", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}
async-trait = "0.1"