[package]
name = "solrstice-py"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solrstice"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "serde", "abi3-py38", "gil-refs"] }
pyo3-asyncio = { workspace = true, features = ["attributes", "tokio-runtime"] }
pythonize.workspace = true
solrstice = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
async-trait.workspace = true