[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "solrstice"
dynamic = ["version"]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A Solr client library written in Rust"
keywords = ["solr", "rust", "search"]
documentation = "https://sh1nku.github.io/solrstice/python"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Typing :: Typed",
]
[project.urls]
Homepage = "https://github.com/Sh1nku/solrstice"
Repository = "https://github.com/Sh1nku/solrstice"


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "solrstice._solrstice"
